force-app/main/default/objects/Case/fields/Payment_Detail__c.field-meta.xml
<CustomField>
    <fullName>Payment_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Detail</label>
    <referenceTo>Payment_Detail__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>