force-app/main/default/objects/Case/recordTypes/Case_Employee.recordType-meta.xml
<RecordType>
    <fullName>Case_Employee</fullName>
    <active>true</active>
    <businessProcess>Wise Hotel Process</businessProcess>
    <label>Case Employee</label>
</RecordType>