force-app/main/default/objects/Case/recordTypes/Case_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Case_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Wise Hotel Process</businessProcess>
    <label>Case Opportunity</label>
</RecordType>