force-app/main/default/objects/Case/recordTypes/Case_Payment_Detail.recordType-meta.xml
<RecordType>
    <fullName>Case_Payment_Detail</fullName>
    <active>true</active>
    <businessProcess>Wise Hotel Process</businessProcess>
    <label>Case Payment Detail</label>
</RecordType>