force-app/main/default/objects/Case/recordTypes/Case_Product.recordType-meta.xml
<RecordType>
    <fullName>Case_Product</fullName>
    <active>true</active>
    <businessProcess>Wise Hotel Process</businessProcess>
    <label>Case Product</label>
</RecordType>