force-app/main/default/objects/Case/listViews/Case_Employee_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Case_Employee_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Case Employee Queue</label>
    <queue>Case_Employee_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>