force-app/main/default/objects/Case/listViews/Case_Payment_Detail_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Case_Payment_Detail_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Case Payment Detail  Queue</label>
    <queue>Case_Payment_Detail_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>